--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@lad-tech/eslint-config": "^0.0.14",
     "@types/react": "~18.2.14",
+    "eslint": "^8.56.0",
+    "jest": "^29.7.0",
+    "prettier": "^3.2.4",
     "typescript": "^5.1.3"
   },
   "private": true
