--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@pchmn/expo-material3-theme": "^1.3.2",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
@@ -18,13 +19,15 @@
     "expo-status-bar": "~1.6.0",
     "i18next": "^23.7.18",
     "react": "18.2.0",
+    "react-hook-form": "^7.49.3",
     "react-i18next": "^14.0.1",
     "react-native": "0.72.6",
     "react-native-paper": "^5.12.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^10.0.3",
-    "react-redux": "^9.1.0"
+    "react-redux": "^9.1.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
