--- a/package.json
+++ b/package.json
@@ -23,16 +23,14 @@
     "react-hook-form": "^7.49.3",
     "react-i18next": "^14.0.1",
     "react-native": "0.72.6",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-paper": "^5.12.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^10.0.3",
     "react-redux": "^9.1.0",
- presist
-    "redux-persist": "^6.0.0"
-
+    "redux-persist": "^6.0.0",
     "zod": "^3.22.4"
- master
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
